--- a/01-HTML-Git-CSS/02-Homework/Develop/assets/css/style.css
+++ b/01-HTML-Git-CSS/02-Homework/Develop/assets/css/style.css
@@ -40,6 +40,10 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
+.ul li {
+    display: inline-block;
+    margin-left: 25px;
+}
 
 a {
     color: #ffffff;
